Add initial setup to cody web lib build

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,7 @@
 packages:
-  - agent
-  - agent/src/__tests__/*
-  - cli
-  - lib/*
-  - vscode
-  - web
+  - 'agent'
+  - 'agent/src/__tests__/*'
+  - 'cli'
+  - 'lib/*'
+  - 'vscode'
+  - 'web'
