--- a/lib/shared/package.json
+++ b/lib/shared/package.json
@@ -10,7 +10,11 @@
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist", "src", "!**/*.test.*"],
+  "files": [
+    "dist",
+    "src",
+    "!**/*.test.*"
+  ],
   "sideEffects": false,
   "scripts": {
     "build": "tsc --build",
@@ -48,6 +52,7 @@
     "@types/diff": "^5.0.9",
     "@types/dompurify": "^3.0.2",
     "@types/highlight.js": "^9.12.4",
+    "@types/highlightjs": "^9.12.6",
     "@types/isomorphic-fetch": "^0.0.39",
     "@types/lodash": "^4.14.195",
     "@types/marked": "^5.0.0",
