--- a/vscode/package.json
+++ b/vscode/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "cody-ai",
-  "private": true,
+  "name": "@sourcegraph/vscode-cody",
   "displayName": "Cody: AI Coding Assistant with Autocomplete & Chat",
   "version": "1.18.0",
   "publisher": "sourcegraph",
