--- a/agent/recordings/defaultClient_631904893/recording.har.yaml
+++ b/agent/recordings/defaultClient_631904893/recording.har.yaml
@@ -1358,7 +1358,7 @@ log:
         send: 0
         ssl: -1
         wait: 0
-    - _id: 2ad38622fb82b541efd248f28fdd0048
+    - _id: 8ae39bd71843547fb901fa59a99053ed
       _order: 0
       cache: {}
       request:
@@ -1405,7 +1405,7 @@ log:
               - speaker: assistant
                 text: Ok.
               - speaker: human
-                text: "Explain what @src/animal.ts:1-6  does in simple terms. Assume the
+                text: "Explain what @src/animal.ts:1-6 ( @src/animal.ts:1-7 ) does in simple terms. Assume the
                   audience is a beginner programmer who has just learned the
                   language features and basic syntax. Focus on explaining: 1)
                   The purpose of the code 2) What input(s) it takes 3) What
@@ -1676,7 +1676,7 @@ log:
         send: 0
         ssl: -1
         wait: 0
-    - _id: ad4d12b86c3f16e562cdecb23a262d4e
+    - _id: 71fdccd416a869faf98ae7f572e220dd
       _order: 0
       cache: {}
       request:
@@ -1723,7 +1723,7 @@ log:
               - speaker: assistant
                 text: Ok.
               - speaker: human
-                text: Please review and analyze @src/animal.ts:1-6  and identify potential areas
+                text: Please review and analyze @src/animal.ts:1-6 ( @src/animal.ts:1-7 ) and identify potential areas
                   for improvement related to code smells, readability,
                   maintainability, performance, security, etc. Do not list
                   issues already addressed in the given code. Focus on providing
